--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta http-equiv="Refresh" content="0; url=https://wordpress-802174-2746121.cloudwaysapps.com/agclient/" />
+    <meta http-equiv="Refresh" content="0; url=https://wordpress-807080-2766191.cloudwaysapps.com/SG2022" />
   </head>
   <body>
   </body>
